--- a/angular13/src/index.html
+++ b/angular13/src/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body class="mat-typography" style="background-color: rgb(255, 255,255)">
+<body>
     <app-root></app-root>
 </body>
 
